Fixed whitespace in menu. Looks ok for Open Sans and standard system font now.

--- a/views/interface/css/1200up.css
+++ b/views/interface/css/1200up.css
@@ -92,7 +92,7 @@ DESKTOP STYLING: 1200px and up
   }
 
   .custom-menu .pure-menu-link {
-    padding: 14px 20px 15px;
+    padding: 17px 20px 16px;
   }
 
   .custom-menu .pure-menu-link.selected {
