--- a/views/login/css/login.css
+++ b/views/login/css/login.css
@@ -14,7 +14,7 @@ body {
   background-size: 150%;
   background-position: center center;
   background-repeat: no-repeat;
-  font-family: "Open Sans", Verdana, Geneva, sans-serif;
+  font-family:'Open Sans', sans-serif;
   font-weight: 400;
   font-size: 0.75em;
   width: 100%;
